--- a/examples/widgets/style.css
+++ b/examples/widgets/style.css
@@ -88,6 +88,7 @@ Slider.vertical {
 
 Slider.rotary {
     slider-style: rotary;
+    width: 100;
     height: 100;
     text-box-position: below;
     text-box-border-color: none;
